// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Popup Test] app have children 1`] = `
Array [
  <p>
    <button
        onClick={[Function]}
    >
        Analize
    </button>
    <button
        onClick={[Function]}
    >
        Show Recomendation
    </button>
</p>,
  <p />,
]
`;

exports[`[Popup Test] app have style 1`] = `
Object {
  "height": 600,
  "width": 800,
}
`;

exports[`[Popup Test] app mapStateToProps doc_detail 1`] = `
Object {
  "doc_detail": "TEST",
  "doc_recomendation": "",
  "doc_user": "TEST",
}
`;

exports[`[Popup Test] app mapStateToProps doc_recomendation 1`] = `
Object {
  "doc_detail": "TEST",
  "doc_recomendation": "TEST",
  "doc_user": "TEST",
}
`;

exports[`[Popup Test] app mapStateToProps doc_user 1`] = `
Object {
  "doc_detail": "",
  "doc_recomendation": "",
  "doc_user": "TEST",
}
`;

exports[`[Popup Test] app mapStateToProps empty 1`] = `
Object {
  "doc_detail": "",
  "doc_recomendation": "",
  "doc_user": "",
}
`;

exports[`[Popup Test] app type 1`] = `
Object {
  "style": Object {
    "height": 600,
    "width": 800,
  },
}
`;

exports[`[Popup Test] overAll  1`] = `
<div
  style={
    Object {
      "height": 600,
      "width": 800,
    }
  }
>
  <p>
    <button
      onClick={[Function]}
    >
      Analize
    </button>
    <button
      onClick={[Function]}
    >
      Show Recomendation
    </button>
  </p>
  <p />
</div>
`;

exports[`[Popup Test] style have height 1`] = `600`;

exports[`[Popup Test] style have width 1`] = `800`;
